--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: gerenciando maquinas virtuais</li>
         <li>Docker: criando containers</li>
-        <li>Ansible</li>
+        <li>Ansible: sua infraestrutura como codigo</li>
         <li>Integração Contínua: maturidade e produtividade</li>
         <li>Kubernetes: introducao a orquestracao de containers</li>
     </ul>
