trocando ul por dl e separando os titulos

--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos de DevOps da Alura</title>
+    <title>lista de Cursos de DevOps da Alura</title>
 </head>
 <body>
     <h1>Cursos de DevOps</h1>
-    
-    <ul>
-        <li>Vagrant: gerenciando maquinas virtuais</li>
-        <li>Docker: criando containers</li>
-        <li>Ansible: sua infraestrutura como codigo</li>
-        <li>Integração Contínua: maturidade e produtividade</li>
-        <li>Kubernetes: introducao a orquestracao de containers</li>
-    </ul>
+
+    <dl>
+        <dt>Vagrant</dt>
+        <dd>gerenciando maquinas virtuais</dd>
+
+        <dt>Docker</dt>
+        <dd>criando containers</dd>
+        
+        <dt>Ansible</dt>
+        <dd>sua infraestrutura como codigo</dd>
+
+        <dt>Integração Contínua</dt>
+        <dd>maturidade e produtividade</dd>
+
+        <dt>Kubernetes</dt>
+        <dd>introducao a orquestracao de containers</dd>
+    </dl>
 </body>
 </html> 
