--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>lista de Cursos</title>
+    <title>lista de Cursos de devOps</title>
 </head>
 <body>
     <h2>Cursos de DevOps</h2>
